--- a/HTML-CSS/WEEK2/WEEK2_VSC/index.html
+++ b/HTML-CSS/WEEK2/WEEK2_VSC/index.html
@@ -16,7 +16,7 @@
     </head>
     </head>
     <body>
-        <header>
+        <header id="navbar">
             <h1>Grids</h1>
         </header>
         <main>
